--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^5.13.17",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.4",
         "slugify": "^1.6.6",
+        "uuid": "^9.0.1",
         "validator": "^13.9.0",
         "xss-clean": "^0.1.4"
     },
